k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journal-backend
  labels:
    app: journal-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: journal-backend
  template:
    metadata:
      labels:
        app: journal-backend
    spec:
      containers:
        - name: backend
          image: us-central1-docker.pkg.dev/project-2dca42d9-9230-4b9e-839/journal-repo/journal-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: http
          startupProbe:
            httpGet:
              path: /public/health-check
              port: 8081
            failureThreshold: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /public/health-check
              port: 8081
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /public/health-check
              port: 8081
            periodSeconds: 10
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: journal-backend-service
  labels:
    app: journal-backend
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: journal-backend
