k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-network-policy
  labels:
    app: postgres
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
    - Egress
  # INGRESS RULES: Only allow incoming connections on port 5432 from the journal-backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: journal-backend
      ports:
        - protocol: TCP
          port: 5432
  # EGRESS RULES: Postgres doesn't need to connect to anything outside. Deny all egress.
  egress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-network-policy
  labels:
    app: journal-backend
spec:
  podSelector:
    matchLabels:
      app: journal-backend
  policyTypes:
    - Ingress
    - Egress
  # INGRESS RULES: Allow incoming traffic to backend api (port 8081) from any pod (including frontend and external load balancers)
  ingress:
    - ports:
        - protocol: TCP
          port: 8081
  # EGRESS RULES: Only allow necessary outgoing connections
  egress:
    # 1. Allow connection to Postgres StatefulSet on port 5432
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - protocol: TCP
          port: 5432
    # 2. Allow DNS resolution queries (vital for calling outside services and internal hostname lookups)
    - to:
        - namespaceSelector: {} # Allow to kube-system namespace
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    # 3. Allow outgoing connection to external third-party endpoints (e.g. Weather API Stack) over HTTP/HTTPS
    - to:
        # Empty block means allow egress to external IP ranges (Internet)
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-network-policy
  labels:
    app: journal-frontend
spec:
  podSelector:
    matchLabels:
      app: journal-frontend
  policyTypes:
    - Ingress
    - Egress
  # INGRESS RULES: Allow web browser clients to fetch static HTML/CSS/JS assets on port 80
  ingress:
    - ports:
        - protocol: TCP
          port: 80
  # EGRESS RULES: Frontend pod only serves static files, it doesn't run backend logic. Only allow DNS resolution.
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
